Ensure that I don't start getting cropped out as the viewport shrinks

--- a/base.css
+++ b/base.css
@@ -134,6 +134,7 @@ body {
         object-fit: cover;
         height: 90vh;
         width: 100%;
+        object-position: left;
     }
 
     #follow-bar {
